--- a/SF/SF.csproj
+++ b/SF/SF.csproj
@@ -42,6 +42,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="lib\compare.cs" />
+    <Compile Include="lib\compare1.cs" />
     <Compile Include="Model\Student.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
